--- a/main.css
+++ b/main.css
@@ -562,11 +562,19 @@ footer span a:hover{
         height: 350px;
         width: 350px;
     }
+    .menu-btn{
+        display: block;
+        z-index: 1000;
+    }
 }
 
 @media (max-width:991px){
     .max-width{
         padding:0 50px;
+    }
+    .menu-btn{
+        display: block;
+        z-index: 1000;
     }
 }
 
@@ -646,6 +654,10 @@ footer span a:hover{
     .mainlogo img{
         display: flex;
     }
+    .menu-btn{
+        display: block;
+        z-index: 1000;
+    }
     .max-width{
         padding:0 23px;
     }
@@ -672,6 +684,10 @@ footer span a:hover{
 @media (max-width:500px){
     .mainlogo img{
         display: flex;
+    }
+    .menu-btn{
+        display: block;
+        z-index: 1000;
     }
     .home .home-content .text-2{
         font-size: 50px;
